[package]
name = "levenshtein-perf-examples"
version = "0.1.0"
authors = ["Ilia Schelokov <thaumant@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "iteration"
harness = false

[[bench]]
name = "store"
harness = false

[[bench]]
name = "versions"
harness = false